Bug 382325 - Type column should not show 'Comment' from *.desktop files
Summary: Type column should not show 'Comment' from *.desktop files
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: yushuoqi
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2017-07-14 07:22 UTC by tguen
Modified: 2025-09-02 08:25 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.18
Sentry Crash Report:


Attachments
screenshot of desktop files (111.10 KB, image/png)
2017-07-14 07:22 UTC, tguen
Details
patch (881 bytes, patch)
2019-12-31 14:28 UTC, count
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tguen 2017-07-14 07:22:07 UTC
Created attachment 106609 [details]
screenshot of desktop files

If a *.desktop file contains a Comment field, it is used as the type by Dolphin. This causes strange 'types' to be displayed, such as "Browse the Web" for firefox.
Comment 1 Kai Uwe Broulik 2017-07-27 12:48:05 UTC
This is from KFileItem (I think) whose (mime)Comment also reads the Comment. Re-assigning there but I don't think this will be changed or "fixed" for Dolphin.
Comment 2 Patrick Silva 2019-03-25 15:05:49 UTC
Bug persists.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 3 count 2019-12-30 11:28:07 UTC
Yes it's still in KFileItem::mimeComment. There the comment field is read and returned when file type is application/x-desktop. But why was that implemented as first?
Comment 4 count 2019-12-31 14:28:55 UTC
Created attachment 124809 [details]
patch

since phabricator won't let me submit a patch, it's here
Comment 5 Nate Graham 2019-12-31 14:46:26 UTC
Let's fix your Phab access so you can submit a patch. Are you having trouble logging in, or submitting it once you're logged in?
Comment 6 count 2020-01-01 09:08:14 UTC
(In reply to Nate Graham from comment #5)
> Let's fix your Phab access so you can submit a patch. Are you having trouble
> logging in, or submitting it once you're logged in?

meeh, was a me too stupid problem, and by the way: Happy new Year!
Comment 7 tguen 2021-02-19 08:32:42 UTC
Was this patch ever submitted?
Comment 8 Bug Janitor Service 2025-07-22 08:27:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1942
Comment 9 yushuoqi 2025-07-22 08:35:46 UTC
I have verified it on the latest kio and dolphin and submitted a PR.
Comment 10 yushuoqi 2025-09-02 08:25:00 UTC
Git commit c53562b0285a93df146b0b82372e8ee4801900fb by yu shuoqi.
Committed on 02/09/2025 at 07:44.
Pushed by meven into branch 'master'.

kfileitem: mimeComment for .desktop should not be their 'Comment'

Except when Type=Link

FIXED-IN: 6.18

M  +4    -3    src/core/kfileitem.cpp

https://invent.kde.org/frameworks/kio/-/commit/c53562b0285a93df146b0b82372e8ee4801900fb