kfileitem: mimeComment for .desktop should not be their 'Comment'

BUG: 382325

Except when Type=Link

FIXED-IN: 6.18